--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -31,14 +31,13 @@
                     ngDefaultControl
                   ></ion-input>
                 </ion-item>
-                <ion-item class="w-100 ion-margin-bottom">
+                <!-- <ion-item class="w-100 ion-margin-bottom">
                   <ion-label position="floating">Código</ion-label>
-                  <!-- [(ngModel)]="image.code" -->
                   <ion-input readonly
                     [value]="code"
                     ngDefaultControl
                   ></ion-input>
-                </ion-item>
+                </ion-item> -->
                 <ion-row class="w-100">
                   <ion-col class="ion-no-padding">
                     <ion-item class="w-100 ion-no-padding ion-margin-bottom">
