--- a/src/app/concursos/concurso-post/concurso-post.page.html
+++ b/src/app/concursos/concurso-post/concurso-post.page.html
@@ -228,6 +228,19 @@
               <!-- </ion-item> -->
 
             </ion-col>
+            
+            <ion-item>
+              <!-- <ion-col> -->
+              <ion-label position="stacked">Total de imágenes por sección</ion-label>
+              <ion-input
+                name="max_img_section"
+                [ngModel]="concurso.max_img_section"
+                type="number"
+                required
+              ></ion-input>
+              <!-- </ion-col> -->
+            </ion-item>
+
             <!-- <ion-col size="12" size-lg="6"> -->
             <ion-col size="12">
               <!-- TODO: responsiveService.isDesktop class=" ion-padding"-->
