--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,11 +7,18 @@
     <!-- sidebar -->
     <app-sidebar *ngIf="!responsiveService.isDesktop"></app-sidebar>
     <ion-router-outlet id="main-content"></ion-router-outlet>
+    
+    
   </ion-content>
+    <app-footer></app-footer>
+  <!-- <ion-footer style="">
+    <app-footer></app-footer>
+  </ion-footer> -->
   <!-- <ion-footer class="ion-no-border">
     <ion-toolbar>
       <ion-title>Footer - No Border</ion-title>
     </ion-toolbar>
   </ion-footer> -->
   <!-- </ion-split-pane> -->
+
 </ion-app>
