debug de btn de post, creación de footer editable

--- a/src/app/concursos/concurso-detail/image-post/image-post.page.html
+++ b/src/app/concursos/concurso-detail/image-post/image-post.page.html
@@ -99,7 +99,7 @@
                       <app-btn-post
                         [posting]="posting"
                         [disabled]="!datosCargados()"
-                        (click)="postImage()"
+                        (post)="postImage()"
                       ></app-btn-post>
                       <!-- <ion-button
                         expand="block"
