--- a/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
+++ b/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
@@ -64,7 +64,7 @@
                     >
                       <app-btn-post
                         [posting]="posting"
-                        (click)="inscribirConcursante()"
+                        (post)="inscribirConcursante()"
                         [disabled]="!datosCargados()"
                       ></app-btn-post>
                       <!-- <ion-button
