--- a/src/app/fotoclubs-abm/fotoclub-post/fotoclub-post.component.html
+++ b/src/app/fotoclubs-abm/fotoclub-post/fotoclub-post.component.html
@@ -44,7 +44,7 @@
                     >
                       <app-btn-post
                         [posting]="posting"
-                        (click)="postFotoclub()"
+                        (post)="postFotoclub()"
                         [disabled]="!datosCargados()"
                       ></app-btn-post>
                     </ion-col>
