--- a/src/app/shared/btn-post/btn-post.component.html
+++ b/src/app/shared/btn-post/btn-post.component.html
@@ -2,7 +2,7 @@
   expand="block"
   type="submit"
   [disabled]="disabled"
-  (click)="click.emit()"
+  (click)="post.emit()"
 >
   <ion-spinner 
     *ngIf="posting; else texto"
