--- a/src/app/nav/footer/footer-post/footer-post.component.html
+++ b/src/app/nav/footer/footer-post/footer-post.component.html
@@ -2,12 +2,8 @@
   <ion-header>
     <ion-toolbar>
       <ion-row class="ion-align-items-center ion-margin-end ion-margin-start">
-        <!-- <ion-back-button [defaultHref]="'/concursos/' + id"></ion-back-button> -->
-        <!-- <ion-back-button (click)="dismiss()"></ion-back-button> -->
         <ion-col>
-          <h5 class="ion-text-wrap">
-            {{ formTitle }}
-          </h5>
+          <h5 class="ion-text-wrap">Editar footer</h5>
         </ion-col>
         <ion-col size="1" class="ion-hide-md-down">
           <ion-button (click)="modalController.dismiss()" fill="clear" class="">
@@ -18,45 +14,46 @@
     </ion-toolbar>
   </ion-header>
 
-  <div slot="start" class="w-100 inner-content ion-float-md-start">
+  <div slot="start" class="inner-content ion-float-md-start w-100">
     <ion-grid>
       <ion-row class="ion-justify-content-center ion-align-self-center">
         <ion-col>
           <ion-row>
             <ion-col>
-
-              <ion-item class="w-100 ion-margin-bottom" *ngIf="parrafo != undefined">
-                <ion-label position="floating">Título</ion-label>
-                <ion-input
-                  ngDefaultControl
-                  [(ngModel)]="parrafo.title"
-                ></ion-input>
-              </ion-item>
-
-              <!-- <ion-row class="w-100">
-                <ion-col class="ion-no-padding">
-                  <ion-item class="w-100 ion-no-padding ion-margin-bottom">
-                    <ion-label position="stacked">Imágen</ion-label>
-                    <input type="file" (change)="imageUpload($event.target)" />
-                  </ion-item>
-                  <div>
-                      <ion-row  class="ion-justify-content-center">
-    
-                        <ion-img  [src]="img_url" alt=""> </ion-img>
-                      </ion-row>
-                  </div>
-                </ion-col>
-              </ion-row> -->
+              <ion-row class="ion-padding-top">
+                <ion-item class="w-100 ion-margin-bottom">
+                  <ion-label position="floating">Dirección</ion-label>
+                  <ion-input
+                  [(ngModel)]="footer.address"
+                    autocapitalize="sentences"
+                    ngDefaultControl
+                  ></ion-input>
+                </ion-item>
+                
+              </ion-row>
+              <ion-row class="ion-padding-top">
+                <ion-item class="w-100 ion-margin-bottom">
+                  <ion-label position="floating">E-mail</ion-label>
+                  <ion-input
+                  [(ngModel)]="footer.email"
+                  type="email"
+                    ngDefaultControl
+                  ></ion-input>
+                </ion-item>
+                
+              </ion-row>
+              <ion-row class="ion-padding-top">
+                <ion-item class="w-100 ion-margin-bottom">
+                  <ion-label position="floating">Teléfono</ion-label>
+                  <ion-input
+                  [(ngModel)]="footer.phone"
+                    type="tel"
+                    ngDefaultControl
+                  ></ion-input>
+                </ion-item>
+                
+              </ion-row>
               
-              <ion-item class="w-100 ion-margin-bottom" *ngIf="parrafo != undefined">
-                <ion-label position="floating">Contenido</ion-label>
-                <ion-textarea
-                  autocapitalize="sentences"
-                  auto-grow="true"
-                  ngDefaultControl
-                  [(ngModel)]="parrafo.content"
-                ></ion-textarea>
-              </ion-item>
 
               <ion-row class="ion-justify-content-end">
                 <ion-col size="12">
@@ -69,8 +66,8 @@
                     >
                       <app-btn-post
                         [posting]="posting"
-                        (post)="postParrafo()"
                         [disabled]="!datosCargados()"
+                        (post)="postFooter()"
                       ></app-btn-post>
                     </ion-col>
 
