imagenes en info centro

--- a/src/app/info-centro/info-centro-post/info-centro-post.component.html
+++ b/src/app/info-centro/info-centro-post/info-centro-post.component.html
@@ -33,7 +33,7 @@
                 ></ion-input>
               </ion-item>
 
-              <!-- <ion-row class="w-100">
+              <ion-row class="w-100">
                 <ion-col class="ion-no-padding">
                   <ion-item class="w-100 ion-no-padding ion-margin-bottom">
                     <ion-label position="stacked">Imágen</ion-label>
@@ -46,7 +46,7 @@
                       </ion-row>
                   </div>
                 </ion-col>
-              </ion-row> -->
+              </ion-row>
               
               <ion-item class="w-100 ion-margin-bottom" *ngIf="parrafo != undefined">
                 <ion-label position="floating">Contenido</ion-label>
