--- a/src/app/info-centro/info-centro.page.scss
+++ b/src/app/info-centro/info-centro.page.scss
@@ -3,4 +3,4 @@ ion-avatar{
     object-fit: contain;
 }
 ion-avatar img{ width: 100% !important; height: 50vh !important; } 
-ion-img{ max-width: 100% !important; max-height: 50vh !important;  object-fit: contain;} 
+ion-img{ max-width: 100% !important; max-height: 50vh !important;  object-fit: cover;} 
