--- a/src/app/info-centro/info-centro.page.html
+++ b/src/app/info-centro/info-centro.page.html
@@ -4,63 +4,112 @@
   </ion-toolbar>
 </ion-header> -->
 
-<ion-content class="ion-padding-start ion-padding-end">
+<ion-content>
   <div *ngIf="(auth.user | async) as u">
-    
-  <ion-row class="ion-align-items-center" *ngIf="rolificador.isAdmin(u)">
-    <h1 class="ion-margin-end"> Agregar nuevo parrafo </h1>
-    <ion-fab-button (click)="postParrafo()"
-      size="small"
-    >
-    <!-- [routerLink]="['nuevo']"  -->
-      <ion-icon name="add"></ion-icon>
-    </ion-fab-button>
-  </ion-row>
  <!-- <ion-list> -->
-    <div *ngFor="let p of parrafos">
-      <ion-grid>
-        <ion-row class="ion-align-items-center">
-          <!-- <ion-col> -->
-            <h3 *ngIf="p.title" class="ion-margin-end">{{p.title}}</h3>
 
-          <!-- </ion-col> -->
-          <!-- <ion-col size="1.5"> -->
-            <ion-buttons class="ion-hide-sm-down" *ngIf="rolificador.isAdmin(u)">
-              <!-- <ion-button [routerLink]="['editar/' + m.user.id]"> -->
-              <ion-button (click)="postParrafo(p)">
-                <ion-icon name="create"></ion-icon>
-              </ion-button>
-              <ion-button (click)="deleteParrafo(p)">
-                <ion-icon name="trash"></ion-icon>
-              </ion-button>
-            </ion-buttons>
-            <ion-buttons class="ion-hide-sm-up">
-              <ion-button
-                (click)="mostrarAcciones($event, p)"
+    <div *ngFor="let p of parrafos; index as i; first as isFirst">
+      
+      <ion-col #rowHeader class="ion-no-padding ion-justify-content-center" *ngIf="isFirst; else parrafo">
+        <!-- <ion-avatar [style.width]="p.id == 0 ? '100%' : '80%'" class="w-100"  [style.height.vh]="obtenerPx()"> -->
+          
+
+        <ion-avatar #avatarImg
+          [style.width]="'100%'" 
+          [style.height.vh]="15"
+        >
+        <!-- <ion-avatar [ngClass]="{'w-100':true, 'h-100':true}"> -->
+          <ion-img 
+            (ionError)="noImg(avatarImg)"
+         
+            [src]="configService.apiUrl(p.img_url)"
+          ></ion-img>
+        </ion-avatar>
+        <ion-row  class="ion-no-padding ion-justify-content-center ion-align-items-center">
+          <h1 *ngIf="p.title">{{p.title}}</h1>          
+          <!-- <ion-buttons class="ion-margin-start" *ngIf="rolificador.isAdmin(u)"> -->
+            <!-- <ion-button [routerLink]="['editar/' + m.user.id]"> -->
+            <ion-button (click)="postParrafo(p)" *ngIf="rolificador.isAdmin(u)" 
+              size="small"  class="ion-margin-start"
+            >
+              <ion-icon name="create"></ion-icon>
+            </ion-button>
+          <!-- </ion-buttons> -->
+        </ion-row>
+        <!-- <hr *ngIf="rolificador.isAdmin(u)" color="dark"> -->
+        <ion-row *ngIf="rolificador.isAdmin(u)"
+          class="ion-justify-content-center ion-padding-top ion-padding-bottom" 
+          style="background: var(--ion-color-light); --ion-padding: 8px"
+        >
+            <ion-row class="ion-align-items-center"
+              [style.width]="(responsiveService.isDesktop ? '85%' : '95%')"
+            >
+              <h2 class="ion-margin-end"> Agregar parrafo </h2>
+              <ion-fab-button (click)="postParrafo()"
+                size="small"
               >
-                <ion-icon
-                  slot="start"
-                  ios="ellipsis-horizontal"
-                  md="ellipsis-vertical"
-                ></ion-icon>
-              </ion-button>
-            </ion-buttons>
-          <!-- </ion-col> -->
+                <ion-icon name="add"></ion-icon>
+              </ion-fab-button>
+            </ion-row>
         </ion-row>
-        <ion-row >
-          <!-- <ion-col > -->
-            <ion-text *ngIf="p.content">{{p.content}}</ion-text>
-          <!-- </ion-col> -->
-          <ion-col>
-            <ion-avatar [ngClass]="{'w-100':true, 'h-100':true}">
-              <ion-img [src]="configService.apiUrl(p.img_url)"></ion-img>
-            </ion-avatar>
+      </ion-col>
+      <ng-template #parrafo>
+        <ion-grid  class="ion-no-padding ion-margin-bottom">
+          <ion-row class="ion-align-items-center ion-justify-content-center">
+            <!-- <ion-col> -->
+            <h3 *ngIf="p.title">{{p.title}}</h3>
+
+            <!-- </ion-col> -->
+            <!-- <ion-col size="1.5"> -->
+              <ion-buttons class="ion-hide-sm-down ion-margin-start" *ngIf="rolificador.isAdmin(u)">
+                <!-- <ion-button [routerLink]="['editar/' + m.user.id]"> -->
+                <ion-button (click)="postParrafo(p)">
+                  <ion-icon name="create"></ion-icon>
+                </ion-button>
+                <ion-button (click)="deleteParrafo(p)">
+                  <ion-icon name="trash"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+              <ion-buttons class="ion-hide-sm-up"  *ngIf="rolificador.isAdmin(u)">
+                <ion-button
+                  (click)="mostrarAcciones($event, p)"
+                >
+                  <ion-icon
+                    slot="start"
+                    ios="ellipsis-horizontal"
+                    md="ellipsis-vertical"
+                  ></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            <!-- </ion-col> -->
+          </ion-row>
+          <ion-col class="ion-no-padding">
+            <ion-row>
+              <ion-text *ngIf="p.content" 
+                class="ion-margin-bottom ion-margin-top ion-padding-start ion-padding-end ion-text-justify" 
+                [style]="'--ion-padding: ' + (responsiveService.isDesktop ? '16%' : '5%')"
+                >{{p.content}}</ion-text>
+            </ion-row>
+            <ion-row #rowImg class="ion-no-padding ion-justify-content-center">
+                <!-- <ion-avatar [style.width]="p.id == 0 ? '100%' : '80%'" class="w-100"  [style.height.vh]="obtenerPx()"> -->
+                <ion-avatar 
+                  [style.width]="p.id == 1 ? '100%' : (responsiveService.isDesktop ? '85%' : '95%')" 
+                  [style.height.vh]="p.id == 1 ? 15 : obtenerVh()"
+                >
+                <!-- <ion-avatar [ngClass]="{'w-100':true, 'h-100':true}"> -->
+                  <ion-img 
+                    (ionError)="noImg(rowImg)"
+                
+                    [src]="configService.apiUrl(p.img_url)"
+                  ></ion-img>
+                </ion-avatar>
+            </ion-row>
           </ion-col>
-        </ion-row>
-        <!-- <ion-row class="ion-justify-content-center">
-            <ion-img [src]="p.img_url"></ion-img>
-        </ion-row> -->
-      </ion-grid>
+          <!-- <ion-row class="ion-justify-content-center">
+              <ion-img [src]="p.img_url"></ion-img>
+          </ion-row> -->
+        </ion-grid>
+      </ng-template>
       </div>
  <!-- </ion-list> -->
   </div>
