Avance provisorio de funcionalidad de vista previa de imagenes en tabla, a posteriori se hara un componente que se encargue de eso, y se usará el enlace de vista previa que se generaría en la API

--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -419,8 +419,7 @@
                             <ion-button title="Ver fotografía"
                               (click)="openImage(r.image)"
                             >
-                              <!-- <ion-button (click)="reviewImage(getImage(r), r)"> -->
-                              <ion-icon name="image-outline"></ion-icon>
+                              <img class="img-button" [src]="configService.apiUrl(r.image.url)" />
                             </ion-button>
                             <ion-button
                               *ngIf="checkPermissions"
