--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -149,181 +149,184 @@
             >
               <!-- concurso card -->
               <!-- <ion-card *ngFor="let concurso of concursos"> -->
-                
-                <ion-card *ngFor="let c of concursos; index as i">
+                  <!-- [style.background-image]="url('configService.apiUrl(c.img_url)')" -->
+                <ion-card *ngFor="let c of concursos; index as i"
+                [ngStyle]="responsiveService.isDesktop ? {'background-image': 'url(' + configService.apiUrl(c.img_url) + ')', 'background-size' : '100% auto'} : {'background-image': 'url(' + configService.apiUrl(c.img_url) + ')', 'background-size' : 'auto 100%'}"
+                >
+                <div class="w-100 h-100 capa-opacidad">
+
                   <!-- <ion-row *ngIf="i%2 == 0 || !responsiveService.isDesktop; else isSecondary"> -->
-                  <ion-row>
-                    <ion-col size="12" size-md="5">
-                          <!-- <ion-avatar [style.height.px]="obtenerPx(colCard)" class="w-100"> -->
-                          <!-- <ion-avatar [style.height]="obtenerPx(colCard)" class="h-100 w-100"> -->
-                          <ion-avatar
+                    <!-- <ion-row> -->
+                      <!-- <ion-col size="12" size-md="5">
+                        <ion-avatar
                             [ngClass]="{
                               'h-100': responsiveService.isDesktop, 
                               'h-50vw': !responsiveService.isDesktop, 
                               'w-100': true
                             }"
-                          >
+                            >
                             <ion-img (ionError)="errorImg($event)" [src]="configService.apiUrl(c.img_url)"></ion-img>
                           </ion-avatar>
-                    </ion-col>
-                    <ion-col #colCard id="colCard" size="12" size-md="7">
-
-                      <ion-row class="h-100">
-
-                        <ion-card-header>
-                          <ion-row class="ion-align-items-center">
-                            <ion-col class="ion-no-padding">
-                              <app-contest-status-chip
-                                [contest]="c"
-                              ></app-contest-status-chip>
-                              <ion-card-title>{{c.name}}</ion-card-title>
-                            </ion-col>
-                          </ion-row>
-                          <ion-card-subtitle>Desde {{c.start_date | date:'dd-MM-yyyy' }} Hasta {{c.end_date | date:'dd-MM-yyyy' }}</ion-card-subtitle>
-                        </ion-card-header>
-                        <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
+                        </ion-col> -->
+                        <!-- <ion-col #colCard id="colCard" size="12" size-md="7"> -->
+                          <ion-col #colCard id="colCard" size="12">
+                            <ion-row class="h-100">
+                              
+                              <ion-card-header>
+                                <ion-row class="ion-align-items-center">
+                                  <ion-col class="ion-no-padding">
+                                    <app-contest-status-chip
+                                    [contest]="c"
+                                    ></app-contest-status-chip>
+                                    <ion-card-title color="light">{{c.name}}</ion-card-title>
+                                  </ion-col>
+                                </ion-row>
+                                <ion-card-subtitle color="light">Desde {{c.start_date | date:'dd-MM-yyyy' }} Hasta {{c.end_date | date:'dd-MM-yyyy' }}</ion-card-subtitle>
+                              </ion-card-header>
+                              <!-- <ion-img [src]="concurso.thumbnailUrl"></ion-img> -->
                        
-                        <ion-card-content style="padding-bottom: 0 !important;" class="w-100">
-                          <!-- <ion-row > -->
-                           
-                            <p class="line-clamp" >
-                              {{c.description}}
-                            </p>
-                          <!-- </ion-row> -->
-                          <ion-row class="ion-margin-top ">
-                            <b>Categorias:</b>
-                            <ion-badge color="light" class="ion-margin-start"
+                              <ion-card-content style="padding-bottom: 0 !important;" class="w-100">
+                                <!-- <ion-row > -->
+                                  
+                                  <p class="line-clamp" >
+                                    {{c.description}}
+                                  </p>
+                                  <!-- </ion-row> -->
+                                  <ion-row class="ion-margin-top ">
+                                    <b>Categorias:</b>
+                                    <ion-badge color="light" class="ion-margin-start"
                               *ngFor="let c of c.categories"
                             >
-                              {{c.name}}
-                            </ion-badge>
-                          </ion-row>
-                          <ion-row class="ion-margin-bottom">
+                            {{c.name}}
+                          </ion-badge>
+                        </ion-row>
+                        <ion-row class="ion-margin-bottom">
                             <b>Secciones:</b>
                             <ion-badge color="light" class="ion-margin-start"
                               *ngFor="let s of c.sections"
                             >
-                              {{s.name}}
-                            </ion-badge>
-                          </ion-row>
-                          <ion-row class="w-100">
-                            <ion-col class="ion-float-right ion-align-self-end">
+                            {{s.name}}
+                          </ion-badge>
+                        </ion-row>
+                        <ion-row class="w-100">
+                          <ion-col class="ion-float-right ion-align-self-end">
                               <!-- <ion-toolbar> -->
-                              <!-- <ion-buttons slot="start"> -->
-                              <ion-button class="ion-float-right"  size="small" [routerLink]="[c.id]"
-                                >Ver concurso</ion-button
-                              >
-                              <!-- </ion-buttons> -->
-                              <!-- </ion-toolbar> -->
-                            </ion-col>
-                          </ion-row>
-                        </ion-card-content>
-
-                          <!-- <ion-row class="ion-padding-start">
+                                <!-- <ion-buttons slot="start"> -->
+                                  <ion-button class="ion-float-right"  size="small" [routerLink]="[c.id]"
+                                  >Ver concurso</ion-button
+                                  >
+                                  <!-- </ion-buttons> -->
+                                  <!-- </ion-toolbar> -->
+                                </ion-col>
+                              </ion-row>
+                            </ion-card-content>
+                            
+                            <!-- <ion-row class="ion-padding-start">
                               <ion-col class="ion-align-self-end ion-no-padding">
                               </ion-col>
-  
-                          </ion-row> -->
-
-
-                       
-                        
-                      </ion-row>
-
-                      
-                    </ion-col>
-                    <!-- <ion-footer>
-
+                              
+                            </ion-row> -->
+                            
+                            
+                            
+                            
+                          </ion-row>
+                          
+                          
+                        </ion-col>
+                        <!-- <ion-footer>
+                          
                       <ion-row class="ion-float-right ion-float-bottom" >
                         <ion-col>
-                 
+                          
                           <ion-button size="small" [routerLink]="[c.id]"
-                            >Ver concurso</ion-button
+                          >Ver concurso</ion-button
                           >
-      
+                          
                         </ion-col>
                       </ion-row>
                     </ion-footer> -->
-                  </ion-row>
-                  <!-- <ng-template #isSecondary>
-                    <ion-row>
-                      <ion-col #colCard id="colCard" size="12" size-md="7">
-
-                        <ion-row class="h-100">
-    
-                          <ion-card-header>
-                            <ion-row class="ion-align-items-center">
-                              <ion-col class="ion-no-padding">
-                                <app-contest-status-chip
+                    <!-- </ion-row> -->
+                    <!-- <ng-template #isSecondary>
+                      <ion-row>
+                        <ion-col #colCard id="colCard" size="12" size-md="7">
+                          
+                          <ion-row class="h-100">
+                            
+                            <ion-card-header>
+                              <ion-row class="ion-align-items-center">
+                                <ion-col class="ion-no-padding">
+                                  <app-contest-status-chip
                                   [contest]="c"
-                                ></app-contest-status-chip>
-                                <ion-card-title>{{c.name}}</ion-card-title>
+                                  ></app-contest-status-chip>
+                                  <ion-card-title>{{c.name}}</ion-card-title>
+                                </ion-col>
+                              </ion-row>
+                            </ion-card-header>
+                            
+                            <ion-card-content style="padding-bottom: 0 !important;" class="w-100">
+                              <ion-row class="truncate" >
+                                <p class=" line-clamp">
+                                  {{c.description}}
+                                </p>
+                              </ion-row>
+                            </ion-card-content>
+                            
+                            <ion-row class="ion-padding-start">
+                              <ion-col class="ion-align-self-end ion-no-padding">
+                                <ion-row class="ion-margin-top ">
+                                  <b>Categorias:</b>
+                                  <ion-badge color="light" class="ion-margin-start"
+                                  *ngFor="let c of c.categories"
+                                  >
+                                  {{c.name}}
+                                </ion-badge>
+                              </ion-row>
+                              <ion-row class="ion-margin-bottom">
+                                <b>Secciones:</b>
+                                <ion-badge color="light" class="ion-margin-start"
+                                *ngFor="let s of c.sections"
+                                >
+                                {{s.name}}
+                              </ion-badge>
+                            </ion-row>
+                          </ion-col>
+                          
+                            </ion-row>
+                            
+                            
+                            
+                            <ion-row class="w-100">
+                              <ion-col class="ion-float-right ion-align-self-end">
+                                
+                                <ion-button class="ion-float-right"  size="small" [routerLink]="[c.id]"
+                                >Ver concurso</ion-button
+                                >
+                                
                               </ion-col>
                             </ion-row>
-                          </ion-card-header>
-                         
-                          <ion-card-content style="padding-bottom: 0 !important;" class="w-100">
-                            <ion-row class="truncate" >
-                              <p class=" line-clamp">
-                                {{c.description}}
-                              </p>
-                            </ion-row>
-                          </ion-card-content>
-    
-                            <ion-row class="ion-padding-start">
-                                <ion-col class="ion-align-self-end ion-no-padding">
-                                  <ion-row class="ion-margin-top ">
-                                    <b>Categorias:</b>
-                                    <ion-badge color="light" class="ion-margin-start"
-                                      *ngFor="let c of c.categories"
-                                    >
-                                      {{c.name}}
-                                    </ion-badge>
-                                  </ion-row>
-                                  <ion-row class="ion-margin-bottom">
-                                    <b>Secciones:</b>
-                                    <ion-badge color="light" class="ion-margin-start"
-                                      *ngFor="let s of c.sections"
-                                    >
-                                      {{s.name}}
-                                    </ion-badge>
-                                  </ion-row>
-                                </ion-col>
-    
-                            </ion-row>
-    
-    
-                         
-                          <ion-row class="w-100">
-                            <ion-col class="ion-float-right ion-align-self-end">
-              
-                              <ion-button class="ion-float-right"  size="small" [routerLink]="[c.id]"
-                                >Ver concurso</ion-button
-                              >
-                      
-                            </ion-col>
+                            
                           </ion-row>
                           
-                        </ion-row>
-    
+                          
+                        </ion-col>
                         
-                      </ion-col>
-                      
-                      <ion-col size="12" size-md="5">
+                        <ion-col size="12" size-md="5">
                         <ion-avatar [style.height.px]="obtenerPx(colCard)" class="w-100">
                           <ion-img (ionImgWillLoad)="obtenerTamanio($event)" [src]="configService.apiUrl(c.img_url)"></ion-img>
                         </ion-avatar>
                       </ion-col>
-                  
+                      
 
                     </ion-row>
                   </ng-template> -->
-              
-                <!-- <ion-label>{{item}}</ion-label> -->
-              </ion-card>
-            </ion-list>
-            <ng-template #texto>
-              <ion-item>No se encontraron concursos</ion-item>
+                  
+                  <!-- <ion-label>{{item}}</ion-label> -->
+                </div>
+                </ion-card>
+              </ion-list>
+              <ng-template #texto>
+                <ion-item>No se encontraron concursos</ion-item>
             </ng-template>
             <ng-template #spinner>
               <ion-row class="ion-justify-content-center">
