En abm de fotografias ahora se consulta por la miniatura, se agrega funcion que retorn url de miniatura dependiendo de si la misma proviene de un array(mas de dos miniaturas) o de un object (una sola miniatura)

--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -419,7 +419,7 @@
                             <ion-button title="Ver fotografía"
                               (click)="openImage(r.image)"
                             >
-                              <img class="img-button" [src]="configService.apiUrl(r.image.url)" />
+                              <img class="img-button" [src]="getThumbUrl(r.image.thumbnail,1)" />
                             </ion-button>
                             <ion-button
                               *ngIf="checkPermissions"
