--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -194,7 +194,7 @@
                                   <!-- </ion-row> -->
                                   <ion-row class="ion-margin-top ">
                                     <b>Categorias:</b>
-                                    <ion-badge color="light" class="ion-margin-start"
+                                    <ion-badge color="dark" class="ion-margin-start"
                               *ngFor="let c of c.categories"
                             >
                             {{c.name}}
@@ -202,7 +202,7 @@
                         </ion-row>
                         <ion-row class="ion-margin-bottom">
                             <b>Secciones:</b>
-                            <ion-badge color="light" class="ion-margin-start"
+                            <ion-badge color="dark" class="ion-margin-start"
                               *ngFor="let s of c.sections"
                             >
                             {{s.name}}
