--- a/src/app/concursos/concursos.page.scss
+++ b/src/app/concursos/concursos.page.scss
@@ -2,6 +2,10 @@ ion-avatar img{ width: 100% !important; height: 100% !important; }
 
 ion-avatar{--border-radius: 0px; } 
 
+ion-badge{
+  --ion-color-base: rgba(0, 0, 0, 0.311) !important;
+}
+
 .capa-opacidad {
  background-color: #55555562;
  color: white;
