--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -123,7 +123,7 @@
                 <h2 class="ion-margin-top ion-margin-bottom ion-margin-end">
                   {{getTitulo(userLogged)}}
                 </h2>
-                <ion-fab-button *ngIf="rolificador.esDelegado(userLogged)"
+                <ion-fab-button *ngIf="rolificador.esDelegado(userLogged) || rolificador.isAdmin(userLogged)"
                   [routerLink]="['nuevo']" size="small"
                 >
                   <ion-icon name="add"></ion-icon>
