--- a/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -274,7 +274,7 @@
                             </ion-button>
                             <ion-button *ngIf="checkPermissions"
                               (click)="
-                                concursoDetailService.desinscribirConcursante.emit(
+                                concursoDetailService.desinscribir.emit(
                                   m
                                 )
                               "
