--- a/src/app/concursos/concurso-detail/jueces/jueces.component.html
+++ b/src/app/concursos/concurso-detail/jueces/jueces.component.html
@@ -184,7 +184,7 @@
                       <ion-buttons class="ion-justify-content-end">
                         <ion-button *ngIf="checkPermissions"
                           (click)="
-                            concursoDetailService.desinscribirJuez.emit(
+                            concursoDetailService.desinscribir.emit(
                               m
                             )
                           "
